--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,20 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.mlkit:face-detection:16.1.2'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
+
+    def cameraVersion = "1.1.0-alpha11"
+    implementation "androidx.camera:camera-core:${cameraVersion}"
+    implementation "androidx.camera:camera-camera2:${cameraVersion}"
+    implementation "androidx.camera:camera-lifecycle:${cameraVersion}"
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    //noinspection GradleDynamicVersion
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
