--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,32 +21,53 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
+        mlModelBinding true
+    }
+
+    // Specify tflite file should not be compressed for the app apk
+    aaptOptions {
+        noCompress "tflite"
     }
 }
 
 dependencies {
-    implementation 'com.google.mlkit:face-detection:16.1.2'
-    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
-
-    def cameraVersion = "1.1.0-alpha11"
-    implementation "androidx.camera:camera-core:${cameraVersion}"
-    implementation "androidx.camera:camera-camera2:${cameraVersion}"
-    implementation "androidx.camera:camera-lifecycle:${cameraVersion}"
-
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
+    //CameraX
+    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
+
+    def cameraVersion = "1.1.0-alpha11"
+    implementation "androidx.camera:camera-core:${cameraVersion}"
+    implementation "androidx.camera:camera-camera2:${cameraVersion}"
+    implementation "androidx.camera:camera-lifecycle:${cameraVersion}"
+
     //ML kit
+    implementation 'com.google.mlkit:face-detection:16.1.2'
     implementation 'com.google.mlkit:pose-detection:17.0.1-beta6' //Pose detection
+
+    //TensorFlowLite
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-text:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-audio:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.3.0'
+
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.3.0'
 
     //noinspection GradleDynamicVersion
     testImplementation 'junit:junit:4.+'
