--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
+    //EventBus
+    implementation("org.greenrobot:eventbus:3.3.1")
+
     //CameraX
     implementation 'androidx.camera:camera-view:1.0.0-alpha23'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
