--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
-    //EventBus
+    //EventBus: https://github.com/greenrobot/EventBus
     implementation("org.greenrobot:eventbus:3.3.1")
+
+    //Pintch-to-zoom: https://github.com/martinwithaar/PinchToZoom
+    implementation('com.bogdwellers:pinchtozoom:0.1')
 
     //CameraX
     implementation 'androidx.camera:camera-view:1.0.0-alpha23'
