--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SistemiDigitali">
         <activity
+            android:name=".PopUpActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SistemiDigitali.PopupOverlay"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity
             android:name=".model.AnalyzeActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
