--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SistemiDigitali">
         <activity
-            android:name=".PopUpActivity"
+            android:name=".views.PopUpActivity"
             android:exported="false"
             android:theme="@style/Theme.SistemiDigitali.PopupOverlay"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".views.MainActivity"
             />
         <activity
-            android:name=".model.AnalyzeActivity"
+            android:name=".views.AnalyzeActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".views.MainActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".views.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SistemiDigitali.NoActionBar">
