--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment:2.4.0'
+    implementation 'androidx.navigation:navigation-ui:2.4.0'
 
     //EventBus: https://github.com/greenrobot/EventBus
     implementation("org.greenrobot:eventbus:3.3.1")
@@ -58,8 +58,8 @@ dependencies {
     implementation('com.bogdwellers:pinchtozoom:0.1')
 
     //CameraX: https://developer.android.com/jetpack/androidx/releases/camera
-    def cameraVersion = "1.1.0-alpha12"
-    def cameraViewVersion = "1.0.0-alpha32"
+    def cameraVersion = "1.1.0-beta01"
+    def cameraViewVersion = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${cameraVersion}"
     implementation "androidx.camera:camera-camera2:${cameraVersion}"
     implementation "androidx.camera:camera-lifecycle:${cameraVersion}"
