--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,20 @@
             android:exported="false"
             android:theme="@style/Theme.SistemiDigitali.PopupOverlay"
             android:parentActivityName=".views.MainActivity"
+            android:hardwareAccelerated="true"
             />
         <activity
             android:name=".views.AnalyzeActivity"
             android:exported="false"
             android:parentActivityName=".views.MainActivity"
-            android:theme="@style/Theme.SistemiDigitali.NoActionBar"/>
+            android:theme="@style/Theme.SistemiDigitali.NoActionBar"
+            android:hardwareAccelerated="true"/>
         <activity
             android:name=".views.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SistemiDigitali.NoActionBar">
+            android:theme="@style/Theme.SistemiDigitali.NoActionBar"
+            android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
