--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     //EventBus: https://github.com/greenrobot/EventBus
     implementation("org.greenrobot:eventbus:3.3.1")
 
-    //Pintch-to-zoom: https://github.com/martinwithaar/PinchToZoom
+    //Pinch-to-zoom: https://github.com/martinwithaar/PinchToZoom
     implementation('com.bogdwellers:pinchtozoom:0.1')
 
     //CameraX: https://developer.android.com/jetpack/androidx/releases/camera
