--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SistemiDigitali">
 
-        <meta-data android:name="com.google.ar.core"/> <!-- AR Core Support -->
+        <meta-data android:name="com.google.ar.core" android:value="optional"/> <!-- AR Core Support -->
 
         <uses-native-library
             android:name="libOpenCL.so"
