--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.7.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.3.1'
 
+    //Face detection MLKit
+    implementation 'com.google.mlkit:face-detection:16.1.5'
+
     //noinspection GradleDynamicVersion
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
